turned sidebar into a nav component, made it collapsible on smaller screens, wrote media queries to display it fixed, remove the initial styling of the side bar so it doesnt apply to the collapsible version

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -305,14 +305,31 @@ a {
   color: #703043 !important;
 }
 
-@media only screen and (min-device-width: 668px) and (max-device-width: 991.98px) {
+/* @media only screen and (min-device-width: 668px) and (max-device-width: 991.98px) {
   p {
     padding: 0 !important;
   }
-}
+  .sideBarToggle{
+    position: fixed;
+    top: 100px;
+  }
+  .sideBarNavStlye{
+    border: 0px solid !important;
+    align-items: baseline;
+  }
+} */
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+@media only screen and (min-device-width: 360px) and (max-device-width: 991.98px) {
   p {
     padding: 0 !important;
   }
+  .sideBarToggle{
+    position: fixed;
+    top: 100px;
+  }
+  .sideBarNavStlye{
+    border: 0px solid !important;
+    align-items: baseline;
+  }
+  
 } ;
